[gd_scene load_steps=3 format=3 uid="uid://combat_forecast_panel"]

[ext_resource type="Script" path="res://scenes/ui/combat_forecast_panel.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_ui_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CombatForecastPanel" type="PanelContainer"]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
theme = ExtResource("2_ui_theme")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TargetNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Target Name"

[node name="HitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.6, 1)
text = "Hit: 80%"

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
text = "Dmg: ~10"

[node name="CritLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
text = "Crit: 5%"

[node name="CounterLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.6, 0.0, 1)
text = "Counter: 12%"
